# srie-runtime

./: README.md  pyproject.toml
SDOS/: GRAPH.json  GRAPH.md  IDENTITY.yaml  REGISTRY.yaml  SRIE_DIGITAL_TWIN.json
srie/: __init__.py
srie/cli/: main.py
srie/cli/commands/: capability.py  discover.py  execution.py  identity.py  indicators.py  init.py  inspect.py  knowledge.py  ops.py  pdl.py  planner.py  runtime.py  studio.py  universe.py
srie/compiler/: __init__.py  pdl.py
srie/kernel/: activity.py  capability.py  cognitive.py  execution.py  identity.py  intent.py  lifecycle.py  manifest.py  registry.py  runtime.py  session.py  task.py  universe.py  workspace.py
srie/mission_control/: __init__.py  app.py
srie/mission_control/templates/: mission_control.html
srie/modules/capability/: __init__.py  capability.py  module.yaml
srie/modules/discovery/: module.yaml  scanner.py
srie/modules/hello/: __init__.py  hello.py  module.yaml
srie/modules/indicators/: indicators.py  module.yaml
srie/modules/planner/: __init__.py  module.yaml  planner.py
srie/sdk/: client.py  models.py
srie/services/: checkpoint.py  cognitive.py  deployment.py  evolution.py  journal.py  knowledge.py  repair.py  sandbox.py  work_log.py
tests/: test_capability.py  test_cognitive.py  test_discovery.py  test_execution.py  test_identity.py  test_indicators.py  test_inspect.py  test_knowledge.py  test_loader.py  test_manifest.py  test_models.py  test_ops.py  test_pdl.py  test_persistence.py  test_planner.py  test_registry.py  test_runtime.py  test_work_manager.py
(+5 files in other folders)
