[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srie-runtime"
version = "0.1.0"
description = "SRIE Runtime — Kernel, Modules, SDK & CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
srie = "srie.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["srie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
